--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <header>
       <h1>Guess My Number!!</h1>
-      <p class="between">(Between 1 and 20)</p>
-      <button class="btn again">Again!</button>
+      <p class="between">( Guess between 1 and 20)</p>
+      <button class="btn again">Try Again!</button>
       <div class="number">?</div>
     </header>
     <main>
@@ -27,6 +27,6 @@
         </p>
       </section>
     </main>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
